Last commits for the day

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,12 @@ body {
   --flipper-color: #f56060;
   --flipper-background: #fbe4e4;
 }
+
+.app {
+  display: flex;
+  height: 100vh;
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 10px;
+}
